fix nav little css and show page attribute spacing

--- a/app/assets/stylesheets/main/nav.scss
+++ b/app/assets/stylesheets/main/nav.scss
@@ -12,6 +12,10 @@
     cursor: pointer;
 }
 
+.nav-search-box {
+    margin-top: 10px;
+}
+
 .nav-left {
     margin: 10px 0 0 20px;
 }
@@ -129,7 +133,6 @@
 
 .marquee-item-data {
     margin-left: 10px;
-    margin-right: 10px;
 }
 
 .marquee-wrapper {
