--- a/app/assets/stylesheets/show/show_body.scss
+++ b/app/assets/stylesheets/show/show_body.scss
@@ -94,6 +94,10 @@
     font-size: 14px;
 }
 
+.show-page-attr-item li {
+    margin-top: 5px;
+}
+
 .show-ceo {
     color: var(--trend-color);
 }
