--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -3,6 +3,7 @@
     background-color: white;
   --text-color: black;
   --bg-color: white;
+  --marquee-bg: white;
   --input-bg: #F0F8FF;
   --hover: #F0F8FF;
   --hover-focus: white;
@@ -15,6 +16,7 @@
     background-color: #202020;
   --text-color: white;
   --bg-color: #202020;
+  --marquee-bg: black;
   --border-color: white;
   --input-bg: #202020;
   --hover: #0e0d0d;
